--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,11 +20,14 @@ a {
 
 :root {
 	--black: #3E434E;
+	--gray-light: #EBEBEB;
 	--white: white;
 	--primary: #7653FC;
+	--primary-hover: #4d2fc4;
 	--red: #FC836D;
 	--green: #1DC37E;
 	--green-light: #C8F8E4;
+
 
 
 }
