--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -35,6 +35,15 @@
     line-height: 16px;
 }
 
+.secondLevelBlock{
+    display:none;
+}
+.secondLevelBlockOpened :last-child{
+    margin-bottom: 20px;
+}
+.secondLevelBlockOpened{
+    display:block;
+}
 .secondBlock{
     margin-top: 15px;
     margin-left: 12px;
